<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_bmi">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.quickhiretest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.quickhiretest.ui.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.example.quickhiretest.ui.Inbox.InboxFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_inbox" />
    <fragment
        android:id="@+id/nav_bmi"
        android:name="com.example.quickhiretest.ui.BMI.BmiFragment"
        android:label="fragment_bmi"
        tools:layout="@layout/fragment_bmi" />
    <fragment
        android:id="@+id/nav_insurance"
        android:name="com.example.quickhiretest.ui.Insurance.InsuranceFragment"
        android:label="fragment_insurance"
        tools:layout="@layout/fragment_insurance" />
    <fragment
        android:id="@+id/nav_editProfile"
        android:name="com.example.quickhiretest.ui.Profile.Edit.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_nav_editProfile_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_inboxDetail"
        android:name="com.example.quickhiretest.ui.Inbox.InboxDetailFragment"
        android:label="fragment_inbox_detail"
        tools:layout="@layout/fragment_inbox_detail" />
</navigation>